<resources>
    <string name="app_name">Calculadora</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="add">+</string>
    <string name="percent">%</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="subtract">-</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="times">*</string>
    <string name="factorial">x!</string>
    <string name="point">.</string>
    <string name="_0">0</string>
    <string name="equals">=</string>
    <string name="division">/</string>
    <string name="cosine">cos</string>
    <string name="sine">sin</string>
    <string name="tangent">tan</string>
    <string name="enviar">Enviar</string>
    <string name="clean">C</string>
    <string name="square_root">√</string>
    <string name="elevate">xy</string>
</resources>
